# mpa

./: README.md  meson.build  meson_options.txt  wscript_build.py
.github/workflows/: a18.yml  build.yml  waf.yml
ci/: build-mingw64.sh  test18.sh
