# booleans
option('gpl', type: 'boolean', value: true, description: 'GPL (version 2 or later) build')
option('cplayer', type: 'boolean', value: true, description: 'mpv CLI player')
option('libmpv', type: 'boolean', value: false, description: 'libmpv library')
option('build-date', type: 'boolean', value: true, description: 'whether to include binary compile time')
option('tests', type: 'boolean', value: false, description: 'unit tests (development only)')
# Reminder: normally always built, but enabled by MPV_LEAK_REPORT.
# Building it can be disabled only by defining NDEBUG through CFLAGS.
option('ta-leak-report', type: 'boolean', value: false, description: 'enable ta leak report by default (development only)')

# misc features
option('cdda', type: 'feature', value: 'disabled', description: 'cdda support (libcdio)')
option('cplugins', type: 'feature', value: 'disabled', description: 'C plugins')
option('dvbin', type: 'feature', value: 'disabled', description: 'DVB input module')
option('dvdnav', type: 'feature', value: 'disabled', description: 'dvdnav support')
option('iconv', type: 'feature', value: 'disabled', description: 'iconv')
option('javascript', type: 'feature', value: 'disabled', description: 'Javascript (MuJS backend)')
option('lcms2', type: 'feature', value: 'disabled', description: 'LCMS2 support')
option('libarchive', type: 'feature', value: 'disabled', description: 'libarchive wrapper for reading zip files and more')
option('libavdevice', type: 'feature', value: 'disabled', description: 'libavdevice')
option('libbluray', type: 'feature', value: 'disabled', description: 'Bluray support')
option('lua',
    type: 'combo',
    choices: ['lua', 'lua52', 'lua5.2', 'lua-5.2', 'luajit', 'lua51',
              'lua5.1', 'lua-5.1', 'auto', 'enabled', 'disabled'],
    value: 'auto',
    description: 'Lua'
)
option('pthread-debug', type: 'feature', value: 'disabled', description: 'pthread runtime debugging wrappers')
option('rubberband', type: 'feature', value: 'disabled', description: 'librubberband support')
option('sdl2', type: 'feature', value: 'disabled', description: 'SDL2')
option('sdl2-gamepad', type: 'feature', value: 'disabled', description: 'SDL2 gamepad input')
option('stdatomic', type: 'feature', value: 'disabled', description: 'C11 stdatomic.h')
option('uchardet', type: 'feature', value: 'auto', description: 'uchardet support')
option('uwp', type: 'feature', value: 'disabled', description: 'Universal Windows Platform')
option('vapoursynth', type: 'feature', value: 'disabled', description: 'VapourSynth filter bridge')
option('vector', type: 'feature', value: 'disabled', description: 'GCC vector instructions')
option('win32-internal-pthreads', type: 'feature', value: 'auto', description: 'internal pthread wrapper for win32 (Vista+)')
option('zimg', type: 'feature', value: 'disabled', description: 'libzimg support (high quality software scaler)')
option('zlib', type: 'feature', value: 'disabled', description: 'zlib')

# audio output features
option('alsa', type: 'feature', value: 'disabled', description: 'ALSA audio output')
option('audiounit', type: 'feature', value: 'disabled', description: 'AudioUnit output for iOS')
option('coreaudio', type: 'feature', value: 'disabled', description: 'CoreAudio audio output')
option('jack', type: 'feature', value: 'disabled', description: 'JACK audio output')
option('openal', type: 'feature', value: 'disabled', description: 'OpenAL audio output')
option('opensles', type: 'feature', value: 'disabled', description: 'OpenSL ES audio output')
option('oss-audio', type: 'feature', value: 'disabled', description: 'OSSv4 audio output')
option('pipewire', type: 'feature', value: 'disabled', description: 'PipeWire audio output')
option('pulse', type: 'feature', value: 'disabled', description: 'PulseAudio audio output')
option('sdl2-audio', type: 'feature', value: 'disabled', description: 'SDL2 audio output')
option('sndio', type: 'feature', value: 'disabled', description: 'sndio audio output')
option('wasapi', type: 'feature', value: 'auto', description: 'WASAPI audio output')

# video output features
option('caca', type: 'feature', value: 'disabled', description: 'CACA')
option('cocoa', type: 'feature', value: 'disabled', description: 'Cocoa')
option('d3d11', type: 'feature', value: 'disabled', description: 'Direct3D 11 video output')
option('direct3d', type: 'feature', value: 'disabled', description: 'Direct3D support')
option('drm', type: 'feature', value: 'disabled', description: 'DRM')
option('egl', type: 'feature', value: 'disabled', description: 'EGL 1.4')
option('egl-android', type: 'feature', value: 'disabled', description: 'Android EGL support')
option('egl-angle', type: 'feature', value: 'disabled', description: 'OpenGL ANGLE headers')
option('egl-angle-lib', type: 'feature', value: 'disabled', description: 'OpenGL Win32 ANGLE library')
option('egl-angle-win32', type: 'feature', value: 'disabled', description: 'OpenGL Win32 ANGLE Backend')
option('egl-drm', type: 'feature', value: 'disabled', description: 'OpenGL DRM EGL Backend')
option('egl-wayland', type: 'feature', value: 'disabled', description: 'OpenGL Wayland Backend')
option('egl-x11', type: 'feature', value: 'disabled', description: 'OpenGL X11 EGL Backend')
option('gbm', type: 'feature', value: 'disabled', description: 'GBM')
option('gl', type: 'feature', value: 'enabled', description: 'OpenGL context support')
option('gl-cocoa', type: 'feature', value: 'disabled', description: 'gl-cocoa')
option('gl-dxinterop', type: 'feature', value: 'disabled', description: 'OpenGL/DirectX Interop Backend')
option('gl-win32', type: 'feature', value: 'disabled', description: 'OpenGL Win32 Backend')
option('gl-x11', type: 'feature', value: 'disabled', description: 'OpenGL X11/GLX (deprecated/legacy)')
option('jpeg', type: 'feature', value: 'disabled', description: 'JPEG support')
option('libplacebo', type: 'feature', value: 'disabled', description: 'libplacebo support')
option('rpi', type: 'feature', value: 'disabled', description: 'Raspberry Pi support')
option('sdl2-video', type: 'feature', value: 'disabled', description: 'SDL2 video output')
option('shaderc', type: 'feature', value: 'disabled', description: 'libshaderc SPIR-V compiler')
option('sixel', type: 'feature', value:'disabled', description: 'Sixel')
option('spirv-cross', type: 'feature', value: 'disabled', description: 'SPIRV-Cross SPIR-V shader converter')
option('plain-gl', type: 'feature', value: 'disabled', description: 'OpenGL without platform-specific code (e.g. for libmpv)')
option('vdpau', type: 'feature', value: 'disabled', description: 'VDPAU acceleration')
option('vdpau-gl-x11', type: 'feature', value: 'disabled', description: 'VDPAU with OpenGL/X11')
option('vaapi', type: 'feature', value: 'disabled', description: 'VAAPI acceleration')
option('vaapi-drm', type: 'feature', value: 'disabled', description: 'VAAPI (DRM/EGL support)')
option('vaapi-wayland', type: 'feature', value: 'disabled', description: 'VAAPI (Wayland support)')
option('vaapi-x11', type: 'feature', value: 'disabled', description: 'VAAPI (X11 support)')
option('vaapi-x-egl', type: 'feature', value: 'disabled', description: 'VAAPI EGL on X11')
option('vulkan', type: 'feature', value: 'disabled', description: 'Vulkan context support')
option('wayland', type: 'feature', value: 'disabled', description: 'Wayland')
option('x11', type: 'feature', value: 'disabled', description: 'X11')
option('xv', type: 'feature', value: 'disabled', description: 'Xv video output')

# hwaccel features
option('android-media-ndk', type: 'feature', value: 'disabled', description: 'Android Media APIs')
option('cuda-hwaccel', type: 'feature', value: 'disabled', description: 'CUDA acceleration')
option('cuda-interop', type: 'feature', value: 'disabled', description: 'CUDA with graphics interop')
option('d3d-hwaccel', type: 'feature', value: 'disabled', description: 'D3D11VA hwaccel')
option('d3d9-hwaccel', type: 'feature', value: 'disabled', description: 'DXVA2 hwaccel')
option('gl-dxinterop-d3d9', type: 'feature', value: 'disabled', description: 'OpenGL/DirectX Interop Backend DXVA2 interop')
option('ios-gl', type: 'feature', value: 'disabled', description: 'iOS OpenGL ES hardware decoding interop support')
option('rpi-mmal', type: 'feature', value: 'disabled', description: 'Raspberry Pi MMAL hwaccel')
option('videotoolbox-gl', type: 'feature', value: 'disabled', description: 'Videotoolbox with OpenGL')

# macOS features
option('macos-10-11-features', type: 'feature', value: 'disabled', description: 'macOS 10.11 SDK Features')
option('macos-10-12-2-features', type: 'feature', value: 'disabled', description: 'macOS 10.12.2 SDK Features')
option('macos-10-14-features', type: 'feature', value: 'disabled', description: 'macOS 10.14 SDK Features')
option('macos-cocoa-cb', type: 'feature', value: 'disabled', description: 'macOS libmpv backend')
option('macos-media-player', type: 'feature', value: 'disabled', description: 'macOS Media Player support')
option('macos-touchbar', type: 'feature', value: 'disabled', description: 'macOS Touch Bar support')
option('swift-build', type: 'feature', value: 'disabled', description: 'macOS Swift build tools')
option('swift-flags', type: 'string', description: 'Optional Swift compiler flags')

# manpages
option('html-build', type: 'feature', value: 'disabled', description: 'html manual generation')
option('manpage-build', type: 'feature', value: 'disabled', description: 'manpage generation')
option('pdf-build', type: 'feature', value: 'disabled', description: 'pdf manual generation')
