# booleans
option('gpl', type: 'boolean', value: true, description: 'GPL (version 2 or later) build')
option('cplayer', type: 'boolean', value: true, description: 'mpv CLI player')
option('libmpv', type: 'boolean', value: false, description: 'libmpv library')
option('build-date', type: 'boolean', value: true, description: 'whether to include binary compile time')
option('tests', type: 'boolean', value: false, description: 'unit tests (development only)')
# Reminder: normally always built, but enabled by MPV_LEAK_REPORT.
# Building it can be disabled only by defining NDEBUG through CFLAGS.
option('ta-leak-report', type: 'boolean', value: false, description: 'enable ta leak report by default (development only)')

# misc features
option('cdda', type: 'feature', value: 'disabled', description: 'cdda support (libcdio)')
option('cplugins', type: 'feature', value: 'disabled', description: 'C plugins')
option('dvbin', type: 'feature', value: 'disabled', description: 'DVB input module')
option('dvdnav', type: 'feature', value: 'disabled', description: 'dvdnav support')
option('iconv', type: 'feature', value: 'disabled', description: 'iconv')
option('javascript', type: 'feature', value: 'disabled', description: 'Javascript (MuJS backend)')
option('lcms2', type: 'feature', value: 'disabled', description: 'LCMS2 support')
option('libarchive', type: 'feature', value: 'disabled', description: 'libarchive wrapper for reading zip files and more')
option('libavdevice', type: 'feature', value: 'disabled', description: 'libavdevice')
option('libbluray', type: 'feature', value: 'disabled', description: 'Bluray support')
option('lua',
    type: 'combo',
    choices: ['lua', 'lua52', 'lua5.2', 'lua-5.2', 'luajit', 'lua51',
              'lua5.1', 'lua-5.1', 'auto', 'enabled', 'disabled'],
    value: 'auto',
    description: 'Lua'
)
option('pthread-debug', type: 'feature', value: 'disabled', description: 'pthread runtime debugging wrappers')
option('rubberband', type: 'feature', value: 'disabled', description: 'librubberband support')
option('sdl2', type: 'feature', value: 'disabled', description: 'SDL2')
option('sdl2-gamepad', type: 'feature', value: 'disabled', description: 'SDL2 gamepad input')
option('stdatomic', type: 'feature', value: 'disabled', description: 'C11 stdatomic.h')
option('uchardet', type: 'feature', value: 'auto', description: 'uchardet support')
option('uwp', type: 'feature', value: 'disabled', description: 'Universal Windows Platform')
option('vapoursynth', type: 'feature', value: 'disabled', description: 'VapourSynth filter bridge')
option('vector', type: 'feature', value: 'disabled', description: 'GCC vector instructions')
option('win32-internal-pthreads', type: 'feature', value: 'auto', description: 'internal pthread wrapper for win32 (Vista+)')
option('zimg', type: 'feature', value: 'disabled', description: 'libzimg support (high quality software scaler)')
option('zlib', type: 'feature', value: 'disabled', description: 'zlib')

# audio output features
option('alsa', type: 'feature', value: 'disabled', description: 'ALSA audio output')
option('audiounit', type: 'feature', value: 'disabled', description: 'AudioUnit output for iOS')
option('coreaudio', type: 'feature', value: 'disabled', description: 'CoreAudio audio output')
option('jack', type: 'feature', value: 'disabled', description: 'JACK audio output')
option('openal', type: 'feature', value: 'disabled', description: 'OpenAL audio output')
option('opensles', type: 'feature', value: 'disabled', description: 'OpenSL ES audio output')
option('oss-audio', type: 'feature', value: 'disabled', description: 'OSSv4 audio output')
option('pipewire', type: 'feature', value: 'disabled', description: 'PipeWire audio output')
option('pulse', type: 'feature', value: 'disabled', description: 'PulseAudio audio output')
option('sdl2-audio', type: 'feature', value: 'disabled', description: 'SDL2 audio output')
option('sndio', type: 'feature', value: 'disabled', description: 'sndio audio output')
option('wasapi', type: 'feature', value: 'auto', description: 'WASAPI audio output')
